Trying to deploy on VPS now