@@ -5,5 +5,4 @@ RUN gradle build --no-daemon
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", \
-"-Djava.security.egd=file:/dev/./urandom",  "-jar", "/home/gradle/src/.build/libs/schedge-all.jar", "db", "serve"]
+ENTRYPOINT ["./docker-entry.sh"]
